--- a/employee_information/templates/employee_information/employees.html
+++ b/employee_information/templates/employee_information/employees.html
@@ -4,7 +4,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h4 class="card-title mb-0">დასაქმებულთა სია</h4>
             <div class="text-start">
-                <button class="mdc-button mdc-button--raised mdc-ripple-upgraded btn-sm" id="create_new"><i class="material-icons mdc-button__icon">add</i><span> Add New</span></button>
+                <button class="mdc-button mdc-button--raised mdc-ripple-upgraded btn-sm" id="create_new"><i class="material-icons mdc-button__icon">add</i><span> დამატება</span></button>
             </div>
         </div>
     </div>
@@ -38,7 +38,7 @@
                     <tr>
                         <td class="px-2 py-1 text-center">{{ employee.id }}</td>
                         <td class="px-2 py-1 text-start">{{ employee.code }}</td>
-                        <td class="px-2 py-1 text-start">{{ employee.firstname }} {{ employee.middlename }} {{ employee.lastname }}</td>
+                        <td class="px-2 py-1 text-start">{{ employee.firstname }}{{ employee.lastname }}</td>
                         <td class="px-2 py-1 text-start">{{ employee.department_id }}</td>
                         <td class="px-2 py-1 text-start">{{ employee.position_id }}</td>
                         <td class="px-2 py-1 text-center">
