--- a/employee_information/templates/employee_information/view_employee.html
+++ b/employee_information/templates/employee_information/view_employee.html
@@ -11,7 +11,7 @@
                 <dt class="mdc-typography mdc-theme--primary">დასაქმებულის ID/Code</dt>
                 <dd class="ps-3 fw-bolder">{{ employee.code }}</dd>
                 <dt class="mdc-typography mdc-theme--primary">სრული სახელი</dt>
-                <dd class="ps-3 fw-bolder">{{ employee.firstname }} {{ employee.middlename }} {{ employee.lastname }}</dd>
+                <dd class="ps-3 fw-bolder">{{ employee.firstname }} {{ employee.lastname }}</dd>
                 <dt class="mdc-typography mdc-theme--primary">Gender</dt>
                 <dd class="ps-3 fw-bolder">{{ employee.gender }}</dd>
                 <dt class="mdc-typography mdc-theme--primary">დაბადების თარიღი</dt>
