--- a/employee_information/templates/employee_information/topNavigation.html
+++ b/employee_information/templates/employee_information/topNavigation.html
@@ -10,7 +10,7 @@
                 <button class="mdc-button mdc-menu-button">
                     <span class="d-flex align-items-center">
                     <span class="figure">
-                        <img src="{% static 'employee_information/assets/material-admin/images/faces/ava.jpg' %}" alt="user" class="user">
+                        <img src="{% static 'employee_information/assets/material-admin/images/user.png' %}" alt="user" class="user">
                     </span>
                     <span class="user-name">{{ user.first_name }}</span>
                     </span>
